# nimp

./: .gitignore  .ruff.toml  LICENSE  README.md  cook-everything.py  main.py  nimp.conf  nimp.py  nose2.cfg  pylintrc  pyproject.toml  settings.conf  settings.json  setup.py
.github/workflows/: ci.yml  pylint.yml  ruff.yml  smoke-test.yml
commands/: __init__.py  _cis_command.py  bink.py  build.py  build_wwise_banks.py  cis_command.py  cis_ue3_build.py  cis_ue3_cook.py  cis_ue3_publish_version.py  cis_ue3_ship.py  cis_wwise_build_banks.py  clean_workspace.py  command.py  generate-loose-files.py  generate-version-file.py  msbuild.py  prepare_farm_workspace.py  publish_symbols.py  sha1.py  ue3-build.py  ue3-cook.py  ue3-loose.py  ue3_build.py  ue3_cook.py  ue3_deploy.py  ue3_deploy_tagset.py  ue3_loose.py  ue3_publish.py  ue3_publish_tagset.py  ue3_ship.py  vsbuild.py
configuration/: system.py
doc/: Makefile  conf.py  index.rst  make.bat
doc/pages/: api.rst  commands.rst  configuration.rst  todo.rst  usage.rst
modules/: __init__.py  module.py
modules/commands/: __init__.py  commands_module.py
modules/configuration/: __init__.py  configuration_module.py
modules/logging/: __init__.py  format.py  logger.py  logging_module.py
nimp/: __init__.py  __main__.py  artifacts.py  build.py  command.py  environment.py  exceptions.py  nimp_cli.py  p4.py  ps3.py  ps4.py  summary.py  symstore.py  system.py  torrent.py  ue4.py  unreal.py  windows.py  xboxone.py
nimp-run/: nimp-run.cpp
nimp/base_commands/: __init__.py  automation.py  build.py  check.py  commandlet.py  create_loadlist.py  dev.py  download_fileset.py  fileset.py  p4.py  package.py  run.py  run_hook.py  run_legacy.py  symbol_server.py  update_symbol_server.py  upload.py  upload_fileset.py
nimp/base_platforms/: __init__.py  android.py  basegdk.py  desktop.py  ios.py  ps4.py  ps5.py  switch.py  wingdk.py  xboxone.py  xsx.py
nimp/commands/: __init__.py  _cis_command.py  _command.py  bink.py  build.py  check.py  (+64 more)
scripts/: configuration.py  distribute.py  environment.py
utilities/: build.py  compression.py  configuration.py  context.py  deployment.py  files.py  hashing.py  inspection.py  json_file.py  logging.py  network.py  paths.py  perforce.py  processes.py  ps4.py  sorting.py  strings.py  ue3.py  ue3_deployment.py  units.py  windows_utilities.py  wwise.py
(+90 files in other folders)
